--- a/logger/outputs/index.html
+++ b/logger/outputs/index.html
@@ -71,7 +71,7 @@
 
       initialFetch()
         .then(() => startStream())
-        .catch(e => console.log(error))
+        .catch(e => console.log(e))
     </script>
   </body>
 </html>
